# weather-daemon

./: .env.example  .gitignore  CHANGES.md  COMPLETION_SUMMARY.md  ENHANCEMENTS.md  FRONTEND_INTEGRATION.md  IMPROVEMENTS.md  INSTALLATION.md  Makefile  QUICKSTART.md  README.md  README.md.old  SUMMARY.md  pyproject.toml  setup.sh  weather.js
deploy/nginx/: weather-locations.conf
deploy/systemd/: weather-daemon.service
src/weather_daemon/: cli.py  config.py  daemon.py  health.py  healthcheck.py  logging_config.py
tests/: __init__.py  test_config.py  test_daemon.py  test_healthcheck.py
